// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`successfully run the tests inside source-map with 'isolatedModules: false' 1`] = `
"FAIL sourcemap-disabled __tests__/source-map.spec.ts
  ● should fail with stacktrace

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

      1 | test('should fail with stacktrace', () => {
      2 |   expect(true).toBe(false)
    > 3 | })
        |   ^
      4 |

      at Object.<anonymous> (../__tests__/source-map.spec.ts:3:18)

FAIL sourcemap-enabled __tests__/source-map.spec.ts
  ● should fail with stacktrace

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

      1 | test('should fail with stacktrace', () => {
    > 2 |   expect(true).toBe(false)
        |                ^
      3 | })
      4 |

      at Object.<anonymous> (../__tests__/source-map.spec.ts:2:16)"
`;

exports[`successfully run the tests inside source-map with 'isolatedModules: true' 1`] = `
"FAIL sourcemap-disabled-isolated __tests__/source-map.spec.ts
  ● should fail with stacktrace

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

      1 | test('should fail with stacktrace', () => {
      2 |   expect(true).toBe(false)
    > 3 | })
        |   ^
      4 |

      at Object.<anonymous> (../__tests__/source-map.spec.ts:3:18)

FAIL sourcemap-enabled-isolated __tests__/source-map.spec.ts
  ● should fail with stacktrace

    expect(received).toBe(expected) // Object.is equality

    Expected: false
    Received: true

      1 | test('should fail with stacktrace', () => {
    > 2 |   expect(true).toBe(false)
        |                ^
      3 | })
      4 |

      at Object.<anonymous> (../__tests__/source-map.spec.ts:2:16)"
`;
